--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Source tenant configuration
 ## Tenant host URL
-SOURCE_TENANT_HOST="<ENTER SOURCE TENANT HERE>"
+SOURCE_TENANT_HOST="<ENTER SOURCE TENANT HERE2>"
 ## Authorization URL for interactive oauth session authentication
 SOURCE_TENANT_AUTHORIZATION_URL="https://dwc-starkiller-hc-ga.authentication.sap.hana.ondemand.com/oauth/authorize"
 ## Token URL for interactive oauth session authentication
