removed old credentials

--- a/.env.example
+++ b/.env.example
@@ -2,27 +2,27 @@
 ## Tenant host URL
 SOURCE_TENANT_HOST="<ENTER SOURCE TENANT HERE>"
 ## Authorization URL for interactive oauth session authentication
-SOURCE_TENANT_AUTHORIZATION_URL="https://dwc-starkiller-hc-ga.authentication.sap.hana.ondemand.com/oauth/authorize"
+SOURCE_TENANT_AUTHORIZATION_URL="your source AUTHORIZATION_URL"
 ## Token URL for interactive oauth session authentication
-SOURCE_TENANT_TOKEN_URL="https://dwc-starkiller-hc-ga.authentication.sap.hana.ondemand.com/oauth/token"
+SOURCE_TENANT_TOKEN_URL="your source TENANT_TOKEN_UR"
 ## Client id for interactive oauth session authentication
-SOURCE_TENANT_OAUTH_CLIENT_ID="sb-6a399341-c86e-4d1f-883d-3f3ea11f2c0a!b13811|client!b2319"
+SOURCE_TENANT_OAUTH_CLIENT_ID="your source client id"
 ## Client secrect for interactive oauth session authentication
-SOURCE_TENANT_OAUTH_CLIENT_SECRET="31421c15-0efa-41c2-ba89-95a7d7c39aa4$bQYlEFklKd2TPXAyUiqKklStlUMqdMUIAcN9yJVWvHQ="
+SOURCE_TENANT_OAUTH_CLIENT_SECRET="your source secret"
 ## Space for the source tenant
 SOURCE_TENANT_SPACE="CLI_DEMO"
 
 # Target tenant configuration
 ## Tenant host URL
-TARGET_TENANT_HOST="https://dwc-starkiller-hc-ttm.starkiller.hanacloudservices.cloud.sap"
+TARGET_TENANT_HOST="your target host"
 ## Authorization URL for interactive oauth session authentication
-TARGET_TENANT_AUTHORIZATION_URL="https://dwc-starkiller-hc-ttm.authentication.sap.hana.ondemand.com/oauth/authorize"
+TARGET_TENANT_AUTHORIZATION_URL="your target AUTHORIZATION_URL"
 ## Token URL for interactive oauth session authentication
-TARGET_TENANT_TOKEN_URL="https://dwc-starkiller-hc-ttm.authentication.sap.hana.ondemand.com/oauth/token"
+TARGET_TENANT_TOKEN_URL="your target TENANT_TOKEN_UR"
 ## Client id for interactive oauth session authentication
-TARGET_TENANT_OAUTH_CLIENT_ID="sb-e166fd95-9e96-46a6-bc8b-e81087a74515!b34411|client!b2319"
+TARGET_TENANT_OAUTH_CLIENT_ID="your target client id"
 ## Client secrect for interactive oauth session authentication
-TARGET_TENANT_OAUTH_CLIENT_SECRET="0a36f602-be0a-40df-b25d-61043c53ce66$2MFqU0Nfk1zRun9Duj60wgbVIq7lmiSEbbJlXsSIVBQ="
+TARGET_TENANT_OAUTH_CLIENT_SECRET="your target secret"
 ## Space for the target tenant
 TARGET_TENANT_SPACE="CLI_DEMO"
 
